# erp_interp

./: .gitignore  pyproject.toml
E0_category_decoding/: E0.py  plot.ipynb  run_E0.sh
E0_category_decoding/results/: category_decoding_results_c2_top5.csv
data/: erp_preprocess.ipynb  erp_preprocess.py  erp_preprocess.sh  get_data.sh  preprocess.py  preprocess.sh  preprocess_debug.ipynb
data/THINGS_metadata/: CONTENTS.txt  category27_bottom-up.tsv
feature_banks/: create_dnn_banks.py  create_feature_banks.sh  create_low_mid_level copy 2.ipynb  create_low_mid_level copy.ipynb  create_low_mid_level.ipynb  create_plm_banks.py
utilz/: pyproject.toml
utilz/utilz/: dnns.py  preprocessing_utilz.py  vis_utilz.py
utilz/utilz.egg-info/: PKG-INFO  SOURCES.txt
