[project]
name = "erp-interp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "mne>=1.11.0",
    "utilz",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
    "h5py>=3.16.0",
]

[tool.uv.workspace]
members = [
    "utilz",
]

[tool.uv.sources]
utilz = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv]
reinstall-package = []
